--- a/css/queries.css
+++ b/css/queries.css
@@ -204,39 +204,47 @@
     margin-right: 15px;
   }
 
-  .burger-menu {
-    display: flex;
-    justify-content: flex-end;
-    position: relative;
+  .menu-toggle-btn {
+    position: static;
+  
   }
 
-  #nav-check:checked ~ .main-nav-bar {
+  .burger-menu {
+    display: inline-flex;
+    justify-content: flex-end;
+    position: relative;
+    z-index: 10000;
+  }
+
+
+  #nav-check:checked ~ .main-navbar {
     display: block;
     transition: all 0.5s;
   }
 
-  .main-nav-bar {
+  .main-navbar {
     display: none;
   }
 
   .main-nav {
     position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: #fff;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    background-color: #eef1f6;
-    left: 0;
-    top: 87px;
-    width: 100%;
-    z-index: 9999;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
   }
 
   .nav-link-item {
-    display: inline-block;
-    width: 80%;
-    margin: auto;
-    padding-top: 20px;
-    border-bottom: 1px solid #0e1133;
+    padding: 1rem 0;
+    margin: 0;
   }
 
   .nav-link-item:last-child {
