--- a/css/style.css
+++ b/css/style.css
@@ -941,7 +941,7 @@
 }
 
 .sponsors-box {
-  display: flex !important;
+  display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
