--- a/css/general.css
+++ b/css/general.css
@@ -30,14 +30,19 @@ a {
   text-decoration: none;
 }
 
+a:hover,
+.footer a:hover{
+  color: #ff3e66;
+}
+
 .secondary-heading {
-  font-size: 44px;
+  font-size: 4.4rem;
   font-weight: 900;
   color: #0e1133;
 }
 
 .sub-heading {
-  font-size: 18px;
+  font-size: 1.8rem;
   font-weight: 400;
   color: #505056;
   margin-top: 11px;
@@ -52,9 +57,9 @@ a {
   color: #fff;
   font-size: 15px;
   font-weight: 500;
-  width: 138px;
-  height: 47px;
-  line-height: 47px;
+  width: 14rem;
+  height: 4.7rem;
+  line-height: 4.7rem;
   border: 1px solid #ff3e66;
   border-radius: 1000px;
   text-align: center;
@@ -114,16 +119,16 @@ a {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  gap: 10px;
-  margin-top: 40px;
+  gap: 1rem;
+  margin-top: 4rem;
 }
 
 .custom-arrow {
   font-size: 16px;
-  height: 50px;
-  width: 50px;
+  height: 5rem;
+  width: 5rem;
   text-align: center;
-  line-height: 50px;
+  line-height: 5rem;
   border: 2px solid #e3e5e8;
   color: #e3e5e8;
   border-radius: 50%;
@@ -151,7 +156,7 @@ a {
 }
 
 .text {
-  font-size: 14px;
+  font-size: 1.4rem;
   font-weight: 500;
   color: #505056;
 }
