--- a/css/style.css
+++ b/css/style.css
@@ -19,13 +19,11 @@
 
 .main-navbar {
   width: 80%;
-  transition: all 3s;
 }
 
 .main-nav {
   display: flex;
   align-items: center;
-  transition: all 3s;
 }
 
 .nav-link-item {
@@ -33,16 +31,10 @@
   transition: all 3s;
 }
 
-.nav-link-item:hover a,
-.nav-link-item:hover i {
-  color: #ff3e66;
-}
-
 .nav-link {
   font-size: 1.5rem;
   font-weight: 500;
   color: #0e1133;
-  padding-right: 0.6px;
 }
 
 .nav-link-icon {
@@ -51,6 +43,7 @@
   position: relative;
   top: 50%;
   transform: translateY(-25%);
+  margin-left: 5px;
 }
 
 .get-started {
@@ -105,6 +98,7 @@
   font-weight: 400;
   margin-top: 1.5rem;
   margin-bottom: 3rem;
+  line-height: 1.1;
 }
 
 .hero-text-box .sub-heading {
@@ -452,8 +446,8 @@
   position: absolute;
   left: -40px;
   top: 0;
-  height: 2.5rem;
-  width: 2.5rem;
+  height: 25px;
+  width: 25px;
   border-radius: 50%;
 }
 
@@ -1068,14 +1062,13 @@
   padding: 5px 0;
 }
 
+.footer-touch ul li a:hover {
+  color: #505056;
+}
+
 .touch-icon {
   color: #2b70fa;
   font-size: 1.6rem;
-}
-
-.footer-container ul li a:hover,
-.footer-container ul li a:active {
-  color: var(--tint-Dark-color);
 }
 
 .footer-copyright {
@@ -1139,8 +1132,8 @@
 .go-up {
   background-color: #ff3e66;
   color: #fff;
-  height: 3.5rem;
-  width: 3.5rem;
+  height: 4rem;
+  width: 4rem;
   text-align: center;
   line-height: 4rem;
   border-radius: 6px;
@@ -1148,5 +1141,5 @@
   right: 2rem;
   bottom: 2rem;
   font-size: 16px;
-  z-index: 900;
+  z-index: 100;
 }
